src/ui/snapshots/terminal_rpg__ui__tests__inspection_hex_target_unicode.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
┌ The Ossuary ───────────────────────────────────────┐┌ Inspect ───────────────┐
│                                                    ││INSPECT                 │
│                                █████               ││35,6  VISIBLE           │
│                             ··········             ││                        │
│                            █··········█            ││Crypt Floor             │
│                            ╬···········            ││Dust lies thick across  │
│                            █··········█            ││worn flagstones.        │
│                          C*······@······█          ││                        │
│                            █··········█            ││Targeted by Cultist Hex │
│                            █··········█            ││A grave-priest's        │
│                            █··········             ││death-hex is fixed upon │
│                                █████               ││this ground.            │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
└────────────────────────────────────────────────────┘└────────────────────────┘
┌ Events ──────────────────────────────────────────────────────────────────────┐
│The crypt waits in silence.                                                   │
│You descend into the ossuary.                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
INSPECT Move keys | i/Esc exit | ?:Help r:Restart Q:Quit
