src/ui/snapshots/terminal_rpg__ui__tests__inspection_hostile_unicode.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
┌ The Ossuary ───────────────────────────────────────┐┌ Inspect ───────────────┐
│                                                    ││INSPECT                 │
│                                █████               ││34,6  VISIBLE           │
│                             ··········             ││                        │
│                            █··········█            ││Crypt Floor             │
│                            ╬···········            ││Dust lies thick across  │
│                            █··········█            ││worn flagstones.        │
│                          G·······@······█          ││                        │
│                            █··········█            ││Ghoul #10               │
│                            █··········█            ││HP 14/14  Armor 1       │
│                            █··········             ││Active                  │
│                                █████               ││A ravenous corpse poised│
│                                                    ││to lunge.               │
│                                                    ││                        │
│                                                    ││Ghoul Lunge             │
│                                                    ││The ghoul gathers itself│
│                                                    ││to cross the marked     │
│                                                    ││ground.                 │
└────────────────────────────────────────────────────┘└────────────────────────┘
┌ Events ──────────────────────────────────────────────────────────────────────┐
│The crypt waits in silence.                                                   │
│You descend into the ossuary.                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
INSPECT Move keys | i/Esc exit | ?:Help r:Restart Q:Quit
