src/ui/snapshots/terminal_rpg__ui__tests__inspection_open_door_unicode_nocolor.snap
---
source: src/ui/mod.rs
expression: "terminal_text(&terminal, 80, 24)"
---
┌ The Ossuary ───────────────────────────────────────┐┌ Inspect ───────────────┐
│                                                    ││INSPECT                 │
│                                ▓▓▓▓▓               ││36,4  VISIBLE           │
│                             ··········             ││                        │
│                            ▓··········▓            ││Open Door               │
│                            /···········            ││A forced doorway yawns  │
│                            ▓··········▓            ││into the dark.          │
│                          ········@······▓          ││                        │
│                            ▓··········▓            ││                        │
│                            ▓··········▓            ││                        │
│                            ▓··········             ││                        │
│                                ▓▓▓▓▓               ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
│                                                    ││                        │
└────────────────────────────────────────────────────┘└────────────────────────┘
┌ Events ──────────────────────────────────────────────────────────────────────┐
│The crypt waits in silence.                                                   │
│You descend into the ossuary.                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
INSPECT Move keys | i/Esc exit | ?:Help r:Restart Q:Quit
